2008-04-18  Rob Bradford  <rob@robster.org.uk>

	* configure.ac:
	Post-release bump.

==================== 2.23.1 ====================

2008-04-18  Rob Bradford  <rob@robster.org.uk>

	* NEWS:
	* README:
	* configure.ac:
	Release 2.23.1.

2008-04-18  Rob Bradford  <rob@robster.org.uk>

	* data/Makefile.am:
	* data/pessulus.desktop.in.in:
	* data/pessulus.svg:
	* date/pessulus-{16,22,24,32,48}.png:
	Add funky icon from Jakub Steiner (bug #466252.)

2008-04-18  Rob Bradford  <rob@robster.org.uk>

	* pessulus.in:
	Switch to using python-gnome-desktop's bugbuddy integration. Patch
	from AMAZIGH Aneglus, bug #394529.)
	* configure.ac:
	We now need gnome-python-desktop 2.17.2 (at least.)

2008-03-17  Vincent Untz  <vuntz@gnome.org>

	* Pessulus/disabledapplets.py: (__fill_liststore): fix exception raised
	when there's no name for an applet.
	Also really try to get the best translation by remembering we've found
	one, instead of just replacing the name whenever there's a new one.
	* Pessulus/icons.py: (load_icon): explicitly return None instead of
	nothing in case of error

2008-03-10  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 2.16.5.

==================== 2.16.4 ====================

2008-03-10  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: Release 2.16.4.

2008-01-05  Josh Triplett  <josh@freedesktop.org>

	* Pessulus/lockdownapplier.py:
	* Pessulus/simpleeditabletreeview.py:
	* Pessulus/disabledapplets.py:
	* Pessulus/maindialog.py:
	* Pessulus/globalvar.py:
	* Pessulus/lockdowncheckbutton.py:
	* Pessulus/icons.py:
	* Pessulus/lockdownbutton.py:
	* Pessulus/safeprotocols.py:
	Remove shebangs from non-executable Python scripts (bug #424328).
	Patch from Debian sabayon package.

2007-09-17  Vincent Untz  <vuntz@gnome.org>

	* configure.ac: post-release bump to 2.16.4.

==================== 2.16.3 ====================

2007-09-17  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README: Release 2.20.0.
